# Align-Five

./: .gitignore  README.md  pyproject.toml  requirements.txt
AlignFive/: align_five.py  board.py  cli.py  game.py  game_interface.py  game_sim.py  game_simulation.py  player.py  utils.py
AlignFive/benchmarks/: multiprocessing_benchmark.py
AlignFive/data_model/: move_data_model.py  player_data_model.py
AlignFive/game/: abstract_game.py  align_five.py  game_sim.py
AlignFive/interface/: board.py  game_window.py
AlignFive/players/: abstract_player.py  all_knowing_player.py  human_player.py  random_player.py  smart_player.py
tests/: arrays_for_tests.py  board.py  game.py  game_interface.py  test_align_five.py  test_board.py  test_game.py  test_game_interface.py  test_player.py  test_utils.py  variables_for_tests.py
